# Ra-Lex-Jin

./: .gitignore  Cargo.toml  flake.nix
.builds/: linux.yml  windows.yml
.github/workflows/: ci.yaml
assets/: map.ldtk
src/: character_controller.rs  character_controller_dynamic.rs  main.rs  mob.rs
src/dungeon/: collisions.rs  mod.rs
src/helpers/: camera_movement.rs  common.rs  mod.rs
src/player/: attack.rs  mod.rs
