[package]
name = "project_ra_lex_jin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_entitiles = {version = "0.4.0", features = ["ldtk", "physics"]}
bevy_xpbd_2d = "0.3.3"
bevy_entitiles_derive = "0.3.0"
bevy-inspector-egui = "0.22.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
