[package]
name = "project_ra_lex_jin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_ecs_ldtk = "0.9.0"
bevy_xpbd_2d = {version="0.3.3", features = ["2d"]}
bevy-inspector-egui = "0.22.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
